versions/0.8.1/_sources/refs/_aws-cdk_aws-gamelift.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"XbfOUB2NdTJEVz3z7/Ab8VUUxHez8snuGmg3tYQqLuc="}

@aws-cdk/aws-gamelift
=====================

.. tabs::

   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/gamelift/0.8.1/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:gamelift:jar:0.8.1'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="gamelift" rev="0.8.1"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>gamelift</artifactId>
           <version>0.8.1</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:gamelift:0.8.1'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='gamelift', version='0.8.1')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-gamelift/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-gamelift@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-gamelift": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-gamelift@0.8.1


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-gamelift/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-gamelift@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-gamelift": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-gamelift@0.8.1



.. mdinclude:: ./__aws-cdk_aws-gamelift.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-gamelift


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-gamelift.cloudformation

AliasResource
~~~~~~~~~~~~~

.. py:class:: AliasResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.gamelift.cloudformation.AliasResource;

      .. code-tab:: javascript

         const { cloudformation.AliasResource } = require('@aws-cdk/aws-gamelift');

      .. code-tab:: typescript

         import { cloudformation.AliasResource } from '@aws-cdk/aws-gamelift';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``AliasResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``AliasResource``
   :type properties: :py:class:`~@aws-cdk/aws-gamelift.cloudformation.AliasResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: RoutingStrategyProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.gamelift.cloudformation.AliasResource.RoutingStrategyProperty;

         .. code-tab:: javascript

            // cloudformation.AliasResource.RoutingStrategyProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.AliasResource.RoutingStrategyProperty } from '@aws-cdk/aws-gamelift';





      .. py:attribute:: fleetId

         ``AliasResource.RoutingStrategyProperty.FleetId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-gamelift-alias-routingstrategy.html#cfn-gamelift-alias-routingstrategy-fleetid


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: message

         ``AliasResource.RoutingStrategyProperty.Message``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-gamelift-alias-routingstrategy.html#cfn-gamelift-alias-routingstrategy-message


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``AliasResource.RoutingStrategyProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-gamelift-alias-routingstrategy.html#cfn-gamelift-alias-routingstrategy-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`



AliasResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: AliasResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.gamelift.cloudformation.AliasResourceProps;

      .. code-tab:: javascript

         // cloudformation.AliasResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.AliasResourceProps } from '@aws-cdk/aws-gamelift';





   .. py:attribute:: aliasName

      ``AWS::GameLift::Alias.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-gamelift-alias.html#cfn-gamelift-alias-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: routingStrategy

      ``AWS::GameLift::Alias.RoutingStrategy``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-gamelift-alias.html#cfn-gamelift-alias-routingstrategy


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-gamelift.cloudformation.AliasResource.RoutingStrategyProperty`


   .. py:attribute:: description

      ``AWS::GameLift::Alias.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-gamelift-alias.html#cfn-gamelift-alias-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


BuildResource
~~~~~~~~~~~~~

.. py:class:: BuildResource(parent, name, [properties])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.gamelift.cloudformation.BuildResource;

      .. code-tab:: javascript

         const { cloudformation.BuildResource } = require('@aws-cdk/aws-gamelift');

      .. code-tab:: typescript

         import { cloudformation.BuildResource } from '@aws-cdk/aws-gamelift';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``BuildResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``BuildResource``
   :type properties: :py:class:`~@aws-cdk/aws-gamelift.cloudformation.BuildResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: S3LocationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.gamelift.cloudformation.BuildResource.S3LocationProperty;

         .. code-tab:: javascript

            // cloudformation.BuildResource.S3LocationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.BuildResource.S3LocationProperty } from '@aws-cdk/aws-gamelift';





      .. py:attribute:: bucket

         ``BuildResource.S3LocationProperty.Bucket``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-gamelift-build-storagelocation.html#cfn-gamelift-build-storage-bucket


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: key

         ``BuildResource.S3LocationProperty.Key``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-gamelift-build-storagelocation.html#cfn-gamelift-build-storage-key


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: roleArn

         ``BuildResource.S3LocationProperty.RoleArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-gamelift-build-storagelocation.html#cfn-gamelift-build-storage-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`



BuildResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: BuildResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.gamelift.cloudformation.BuildResourceProps;

      .. code-tab:: javascript

         // cloudformation.BuildResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.BuildResourceProps } from '@aws-cdk/aws-gamelift';





   .. py:attribute:: buildName

      ``AWS::GameLift::Build.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-gamelift-build.html#cfn-gamelift-build-name


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: storageLocation

      ``AWS::GameLift::Build.StorageLocation``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-gamelift-build.html#cfn-gamelift-build-storagelocation


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-gamelift.cloudformation.BuildResource.S3LocationProperty` or undefined


   .. py:attribute:: version

      ``AWS::GameLift::Build.Version``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-gamelift-build.html#cfn-gamelift-build-version


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


FleetResource
~~~~~~~~~~~~~

.. py:class:: FleetResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.gamelift.cloudformation.FleetResource;

      .. code-tab:: javascript

         const { cloudformation.FleetResource } = require('@aws-cdk/aws-gamelift');

      .. code-tab:: typescript

         import { cloudformation.FleetResource } from '@aws-cdk/aws-gamelift';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``FleetResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``FleetResource``
   :type properties: :py:class:`~@aws-cdk/aws-gamelift.cloudformation.FleetResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: IpPermissionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.gamelift.cloudformation.FleetResource.IpPermissionProperty;

         .. code-tab:: javascript

            // cloudformation.FleetResource.IpPermissionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.FleetResource.IpPermissionProperty } from '@aws-cdk/aws-gamelift';





      .. py:attribute:: fromPort

         ``FleetResource.IpPermissionProperty.FromPort``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-gamelift-fleet-ec2inboundpermission.html#cfn-gamelift-fleet-ec2inboundpermissions-fromport


         :type: number or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: ipRange

         ``FleetResource.IpPermissionProperty.IpRange``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-gamelift-fleet-ec2inboundpermission.html#cfn-gamelift-fleet-ec2inboundpermissions-iprange


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: protocol

         ``FleetResource.IpPermissionProperty.Protocol``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-gamelift-fleet-ec2inboundpermission.html#cfn-gamelift-fleet-ec2inboundpermissions-protocol


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: toPort

         ``FleetResource.IpPermissionProperty.ToPort``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-gamelift-fleet-ec2inboundpermission.html#cfn-gamelift-fleet-ec2inboundpermissions-toport


         :type: number or :py:class:`@aws-cdk/cdk.Token`



FleetResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: FleetResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.gamelift.cloudformation.FleetResourceProps;

      .. code-tab:: javascript

         // cloudformation.FleetResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.FleetResourceProps } from '@aws-cdk/aws-gamelift';





   .. py:attribute:: buildId

      ``AWS::GameLift::Fleet.BuildId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-gamelift-fleet.html#cfn-gamelift-fleet-buildid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: desiredEc2Instances

      ``AWS::GameLift::Fleet.DesiredEC2Instances``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-gamelift-fleet.html#cfn-gamelift-fleet-desiredec2instances


      :type: number or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: ec2InstanceType

      ``AWS::GameLift::Fleet.EC2InstanceType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-gamelift-fleet.html#cfn-gamelift-fleet-ec2instancetype


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: fleetName

      ``AWS::GameLift::Fleet.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-gamelift-fleet.html#cfn-gamelift-fleet-name


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: serverLaunchPath

      ``AWS::GameLift::Fleet.ServerLaunchPath``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-gamelift-fleet.html#cfn-gamelift-fleet-serverlaunchpath


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: description

      ``AWS::GameLift::Fleet.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-gamelift-fleet.html#cfn-gamelift-fleet-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: ec2InboundPermissions

      ``AWS::GameLift::Fleet.EC2InboundPermissions``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-gamelift-fleet.html#cfn-gamelift-fleet-ec2inboundpermissions


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-gamelift.cloudformation.FleetResource.IpPermissionProperty` or undefined


   .. py:attribute:: logPaths

      ``AWS::GameLift::Fleet.LogPaths``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-gamelift-fleet.html#cfn-gamelift-fleet-logpaths


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: maxSize

      ``AWS::GameLift::Fleet.MaxSize``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-gamelift-fleet.html#cfn-gamelift-fleet-maxsize


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: minSize

      ``AWS::GameLift::Fleet.MinSize``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-gamelift-fleet.html#cfn-gamelift-fleet-minsize


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: serverLaunchParameters

      ``AWS::GameLift::Fleet.ServerLaunchParameters``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-gamelift-fleet.html#cfn-gamelift-fleet-serverlaunchparameters


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



.. py:currentmodule:: @aws-cdk/aws-gamelift

